# Multi-source-candidate-data-transformer

./: README.md  pyproject.toml  requirements.txt
config/: custom_example.json
design/: DESIGN.md
output/: custom.json  default.json
samples/: recruiter_export.csv
samples/ats/: applicants.json  malformed.json
scripts/: make_design_pdf.py  make_sample_resumes.py
src/transformer/: __init__.py  canonical_schema.json  cli.py  confidence.py  config.py  detect.py  merge.py  models.py  pipeline.py  project.py  validate.py
src/transformer/extract/: __init__.py  ats_json.py  csv_source.py  resume.py
src/transformer/normalize/: __init__.py  country.py  dates.py  emails.py  names.py  phones.py  skills.py
tests/: test_merge.py  test_normalize.py  test_pipeline.py  test_projection.py
