[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Deterministic, config-driven multi-source candidate data transformer"
requires-python = ">=3.9"
dependencies = [
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "jsonschema>=4.0",
    "pdfplumber>=0.10",
    "python-dateutil>=2.8",
]

[project.scripts]
candidate-transformer = "transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
